# war-machine

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  requirements.txt
bot/: main.py
bot/handlers/: __init__.py  commands.py  orders.py  positions.py  start.py  strategy.py
bot/services/: __init__.py  bybit_service.py  orders.py  strategy_service.py
config/: .gitignore  settings.py  strategies.yml.example  strategy.py  yaml_persistence.py
