[tool.poetry]
name = "war-machine"
version = "0.1.0"
description = "Futures trading bot for managing Bybit futures accounts via Telegram"
authors = ["mobneo"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.0.0"
ccxt = "^4.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
